--- a/program/index.html
+++ b/program/index.html
@@ -47,8 +47,8 @@
               <p>The Refugee Learning Accelerator is a six month program, lasting from October 2017 to April 2018. We are not a typical
 				  accelerator: we're more interested in building a community of innovators who can collaborate to build
 				  technologies which address some of the Middle East's biggest challenges, rather than launching the
-				  next billion dollar company. This is an opportunity to learn alongside some of the most interesting
-				  work happening at the MIT Media Lab.</p>
+				  next billion dollar company. This is an opportunity to learn while working alongside some of the most 
+		      interesting work happening at the MIT Media Lab.</p>
           </div>
 </div>
 				  </header>
@@ -85,9 +85,10 @@
 					      their project. We structure our support for optimal impact: we help you find NGO partners
 					      who can deploy your project, we connect you with technical experts to further its
 					      development, we host workshops on relevant topics (entrepreneurship, monitoring &
-					      evaluation, etc.) and we provide funding to get prototypes tested in the field. You
-					      continue to work on the project and think about where you want to take it next--and we do
-					      our best to support that vision.</p>
+					      evaluation, etc.) and we provide funding to get prototypes tested in the field. We bridge 
+					connections between the private/tech and humanitarian sectors with your work as needed. You 
+					continue to work on the project and think about where you want to take it next--and we do our 
+					best to support that vision.</p>
 	            </div>
 	        </div>
 						    </section>
