--- a/program/index.html
+++ b/program/index.html
@@ -85,8 +85,8 @@
 					      their project. We structure our support for optimal impact: we help you find NGO partners
 					      who can deploy your project, we connect you with technical experts to further its
 					      development, we host workshops on relevant topics (entrepreneurship, monitoring &
-					      evaluation, etc.) and we provide funding to get prototypes tested in the field. We bridge 
-					connections between the private/tech and humanitarian sectors with your work as needed. You 
+					      evaluation, etc.) and we provide funding to get prototypes tested in the field. We help 
+					bridge connections between you and the private/tech and humanitarian sectors as needed. You 
 					continue to work on the project and think about where you want to take it next--and we do our 
 					best to support that vision.</p>
 	            </div>
