--- a/about/index.html
+++ b/about/index.html
@@ -62,10 +62,16 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/Advisor/" alt="Haifa Dia Al-Attia">
-    
+                            <img src="/BW_Haifa" alt="Haifa Dia Al-Attia">
                                 <h3>Haifa Dia Al-Attia</h3>
-                                <p>Haifa leads the Queen Rania Foundation for Education and Development (QRF), an NGO that is charged with influencing national policy and leading innovation in education towards improving the quality and state of that offering in Jordan and improving the learning outcomes of students.<a class="class2" href="http://www.qrf.org/qrf_managers">Click here to learn more...</a> </p>
+                                <p>CEO Queen Rania Foundation for Education and Development (QRF)<a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
+                            </div>
+                        </div>
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <img src="/BW_Jackie" alt="Jackie Strecker">
+                                <h3>Jackie Strecker/h3>
+                                <p>Learn Lab Manager<a class="class2" href="">UNHCR Innovation</a> </p>
                             </div>
                         </div>
                     </div>
