--- a/about/index.html
+++ b/about/index.html
@@ -62,18 +62,25 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW_Haifa" alt="Haifa Dia Al-Attia">
+                            <img src="/BW/Haifa" alt="Haifa Dia Al-Attia">
                                 <h3>Haifa Dia Al-Attia</h3>
-                                <p>CEO Queen Rania Foundation for Education and Development (QRF)<a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
+                                <p>CEO,<a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
                             </div>
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW_Jackie" alt="Jackie Strecker">
-                                <h3>Jackie Strecker/h3>
-                                <p>Learn Lab Manager<a class="class2" href="">UNHCR Innovation</a> </p>
+                            <img src="/BW/Jackie" alt="Jackie Strecker">
+                                <h3>Jackie Strecker</h3>
+                                <p>Learn Lab Manager,<a class="class2" href="http://www.unhcr.org/innovation/">UNHCR Innovation</a> </p>
                             </div>
                         </div>
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <img src="/BW/Habib" alt="Habib Hadad">
+                                <h3>Habib Hadad</h3>
+                                <p>Executive Director,<a class="class2" href="http://www.e14fund.com/">E14 Fund</a> </p>
+                            </div>
+                        </div>													     
                     </div>
                 </div>
             </section>
