--- a/about/index.html
+++ b/about/index.html
@@ -64,23 +64,30 @@
                             <div class="service-box">
                             <img src="/BW/Haifa" alt="Haifa Dia Al-Attia">
                                 <h3>Haifa Dia Al-Attia</h3>
-                                <p>CEO,<a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
+                                <p>CEO, <a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
                             </div>
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
                             <img src="/BW/Jackie" alt="Jackie Strecker">
                                 <h3>Jackie Strecker</h3>
-                                <p>Learn Lab Manager,<a class="class2" href="http://www.unhcr.org/innovation/">UNHCR Innovation</a> </p>
+                                <p>Learn Lab Manager, <a class="class2" href="http://www.unhcr.org/innovation/">UNHCR Innovation</a> </p>
                             </div>
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
                             <img src="/BW/Habib" alt="Habib Hadad">
                                 <h3>Habib Hadad</h3>
-                                <p>Executive Director,<a class="class2" href="http://www.e14fund.com/">E14 Fund</a> </p>
+                                <p>Executive Director, <a class="class2" href="http://www.e14fund.com/">E14 Fund</a> </p>
                             </div>
-                        </div>													     
+                        </div>	
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <img src="/BW/Lina" alt="Lina Sergie Attar">
+                                <h3>Lina Sergie Attar</h3>
+                                <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
+                            </div>
+                        </div>												       
                     </div>
                 </div>
             </section>
