--- a/about/index.html
+++ b/about/index.html
@@ -87,7 +87,15 @@
                                 <h3>Lina Sergie Attar</h3>
                                 <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
                             </div>
+                        </div>	
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <img src="/BW/Barbara" alt="Barbara Moser-Mercer">
+                                <h3>Barbara Moser-Mercerr</h3>
+                                <p>Director, <a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">InZone</a> </p>
+                            </div>
                         </div>												       
+												      
                     </div>
                 </div>
             </section>
