--- a/about/index.html
+++ b/about/index.html
@@ -62,35 +62,35 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/Haifa" alt="Haifa Dia Al-Attia">
+                            <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia">
                                 <h3>Haifa Dia Al-Attia</h3>
                                 <p>CEO, <a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
                             </div>
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/Jackie" alt="Jackie Strecker">
+                            <img src="/BW/BWJackie_Strecker" alt="Jackie Strecker">
                                 <h3>Jackie Strecker</h3>
                                 <p>Learn Lab Manager, <a class="class2" href="http://www.unhcr.org/innovation/">UNHCR Innovation</a> </p>
                             </div>
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/Habib" alt="Habib Hadad">
-                                <h3>Habib Hadad</h3>
+                            <img src="/BW/BWHabib_Haddad" alt="Habib Hadad">
+                                <h3>Habib Haddad</h3>
                                 <p>Executive Director, <a class="class2" href="http://www.e14fund.com/">E14 Fund</a> </p>
                             </div>
                         </div>	
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/Lina" alt="Lina Sergie Attar">
+                            <img src="/BW/BWLina_Sergie_Attar" alt="Lina Sergie Attar">
                                 <h3>Lina Sergie Attar</h3>
                                 <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
                             </div>
                         </div>	
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/Barbara" alt="Barbara Moser-Mercer">
+                            <img src="/BW/BWBarbara_Moser-Mercer" alt="Barbara Moser-Mercer">
                                 <h3>Barbara Moser-Mercerr</h3>
                                 <p>Director, <a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">InZone</a> </p>
                             </div>
