--- a/about/index.html
+++ b/about/index.html
@@ -112,28 +112,28 @@
                 <div class="row">
 				<div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                            <img src="/Fysal/" alt="Fysal">
+                            <img src="BW/BWFysal/" alt="Fysal" height="200px" width="200px">
                             <h3>Fysal A Alkhayyal</h3>
                             <p>Bio</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                        <img src="/Genevieve/" alt="Genevieve">
+                        <img src="BW/BWGenevieve/" alt="Genevieve" height="200px" width="200px">
                             <h3>Genevieve Barrons</h3>
                             <p>Bio</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                            <img src="/philipp/" alt="Philipp">
+                            <img src="BW/BWPhilipp/" alt="Philipp" height="200px" width="200px">
                             <h3>J. Philipp Schmidt</h3>
                             <p>Bio</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                            <img src="/Lyndie/" alt="Lyndie">
+                            <img src="BW/BWLyndie/" alt="Lyndie" height="200px" width="200px">
                             <h3>Lyndie Mitchell</h3>
                             <p>Bio</p>
                         </div>
