--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@
                         </div>	
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/BWLina_Sergie_Attar" alt="Lina Sergie Attar" height="200px" width="200px">
+                            <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" height="200px" width="200px">
                                 <h3>Lina Sergie Attar</h3>
                                 <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
                             </div>
