--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/BWJackie_Strecker" alt="Jackie Strecker" height="200px" width="200px">
+                            <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" height="200px" width="200px">
                                 <h3>Jackie Strecker</h3>
                                 <p>Learn Lab Manager, <a class="class2" href="http://www.unhcr.org/innovation/">UNHCR Innovation</a> </p>
                             </div>
