--- a/about/index.html
+++ b/about/index.html
@@ -76,7 +76,7 @@
                         </div>
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/BWHabib_Haddad" alt="Habib Hadad" height="200px" width="200px">
+                            <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" height="200px" width="200px">
                                 <h3>Habib Haddad</h3>
                                 <p>Executive Director, <a class="class2" href="http://www.e14fund.com/">E14 Fund</a> </p>
                             </div>
@@ -90,7 +90,7 @@
                         </div>	
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/BW/BWBarbara_Moser-Mercer" alt="Barbara Moser-Mercer" height="200px" width="200px">
+                            <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">
                                 <h3>Barbara Moser-Mercerr</h3>
                                 <p>Director, <a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">InZone</a> </p>
                             </div>
@@ -112,28 +112,28 @@
                 <div class="row">
 				<div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                            <img src="BW/BWFysal/" alt="Fysal" height="200px" width="200px">
+                            <img src="BW/BWFysal.jpg/" alt="Fysal" height="200px" width="200px">
                             <h3>Fysal A Alkhayyal</h3>
                             <p>Bio</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                        <img src="BW/BWGenevieve/" alt="Genevieve" height="200px" width="200px">
+                        <img src="BW/BWGenevieve.jpg" alt="Genevieve" height="200px" width="200px">
                             <h3>Genevieve Barrons</h3>
                             <p>Bio</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                            <img src="BW/BWPhilipp/" alt="Philipp" height="200px" width="200px">
+                            <img src="BW/BWPhilipp.jpg" alt="Philipp" height="200px" width="200px">
                             <h3>J. Philipp Schmidt</h3>
                             <p>Bio</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="service-box">
-                            <img src="BW/BWLyndie/" alt="Lyndie" height="200px" width="200px">
+                            <img src="BW/BWLyndie.jpg" alt="Lyndie" height="200px" width="200px">
                             <h3>Lyndie Mitchell</h3>
                             <p>Bio</p>
                         </div>
