--- a/about/index.html
+++ b/about/index.html
@@ -87,7 +87,7 @@
                                 <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
                             </div>
                         </div>	
-			<div class="col-lg-3 col-md-6 text-center">
+			<div class="col-lg-3 col-md-6 text-center" style="position: left">
                             <div class="service-box">
                             <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">
                                 <h3>Barbara Moser-Mercer</h3>
