--- a/about/index.html
+++ b/about/index.html
@@ -87,14 +87,20 @@
                                 <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
                             </div>
                         </div>	
-			<div class="col-lg-3 col-md-6 text-center" style="position: left">
+			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
                             <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">
                                 <h3>Barbara Moser-Mercer</h3>
                                 <p>Director, <a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">InZone</a> </p>
                             </div>
                         </div>												       
-												      
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
+                                <h3></h3>
+                                <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
+                            </div>
+                        </div>										      
                     </div>
                 </div>
             </section>
