--- a/about/index.html
+++ b/about/index.html
@@ -93,14 +93,31 @@
                                 <h3>Barbara Moser-Mercer</h3>
                                 <p>Director, <a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">InZone</a> </p>
                             </div>
-                        </div>												       
+                        </div>	
+			<!--Extra spaces for future adviors and to make it so Barbara is aligned on the left and not awkwardly on the right-->
 			<div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
                             <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
                                 <h3></h3>
                                 <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
                             </div>
-                        </div>										      
+                        </div>	
+			<!--Extra spaces for future adviors and to make it so Barbara is aligned on the left and not awkwardly on the right-->
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
+                                <h3></h3>
+                                <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
+                            </div>
+                        </div>
+			<!--Extra spaces for future adviors and to make it so Barbara is aligned on the left and not awkwardly on the right-->
+			<div class="col-lg-3 col-md-6 text-center">
+                            <div class="service-box">
+                            <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
+                                <h3></h3>
+                                <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
+                            </div>
+                        </div>																		    
                     </div>
                 </div>
             </section>
