--- a/program/index.html
+++ b/program/index.html
@@ -44,11 +44,10 @@
           <div class="header-content-inner">
               <h1 id="homeHeading">How It Works</h1>
               <hr>
-              <p>The Refugee Learning Accelerator is a six month program, lasting from October 2017 to April 2018. We are not a typical
-				  accelerator: we're more interested in building a community of innovators who can collaborate to build
-				  technologies which address some of the Middle East's biggest challenges, rather than launching the
-				  next billion dollar company. This is an opportunity to learn while working alongside some of the most 
-		      interesting work happening at the MIT Media Lab.</p>
+              <p>The Refugee Learning Accelerator is a six month program, lasting from October 2017 to April 2018. We are not a typical 
+		      accelerator: we're more interested in building a community of innovators who can collaborate to build technologies 
+		      which address some of the Middle East's biggest challenges, rather than launching the next billion dollar company. 
+		      This is an opportunity to learn alongside some of the most interesting work happening at the MIT Media Lab.</p>
           </div>
 </div>
 				  </header>
@@ -82,11 +81,11 @@
 					      experience. Your team pitches to a panel of judges, who provide feedback.</p>
 							    <h2>4. Incubate (Feb-April 2018)</h2>
 	                        <p>The teams with the most promising prototypes receive further support to help them continue working on
-					      their project. We structure our support for optimal impact: we help you find NGO partners
-					      who can deploy your project, we connect you with technical experts to further its
-					      development, we host workshops on relevant topics (entrepreneurship, monitoring &
-					      evaluation, etc.) and we provide funding to get prototypes tested in the field. We help 
-					bridge connections between you and the private/tech and humanitarian sectors as needed. You 
+					their project. We structure our support for optimal impact: we help you find NGO partners
+					who can deploy your project, we connect you with technical experts to further its
+					development, we host workshops on relevant topics (entrepreneurship, monitoring &
+					evaluation, etc.) and we provide funding to get prototypes tested in the field. We help 
+					bridge connections between you, the private, tech, and humanitarian sectors." You 
 					continue to work on the project and think about where you want to take it next--and we do our 
 					best to support that vision.</p>
 	            </div>
