--- a/program/index.html
+++ b/program/index.html
@@ -85,7 +85,7 @@
 					who can deploy your project, we connect you with technical experts to further its
 					development, we host workshops on relevant topics (entrepreneurship, monitoring &
 					evaluation, etc.) and we provide funding to get prototypes tested in the field. We help 
-					bridge connections between you, the private, tech, and humanitarian sectors." You 
+					bridge connections between you, the private, tech, and humanitarian sectors. You 
 					continue to work on the project and think about where you want to take it next--and we do our 
 					best to support that vision.</p>
 	            </div>
