--- a/program/index.html
+++ b/program/index.html
@@ -84,7 +84,7 @@
 					their project. We structure our support for optimal impact: we help you find NGO partners
 					who can deploy your project, we connect you with technical experts to further its
 					development, we host workshops on relevant topics (entrepreneurship, monitoring &
-					evaluation, etc.) and we provide funding to get prototypes tested in the field. We help 
+					evaluation, etc.) and we provide funding to get prototypes tested in the field. We 
 					bridge connections between you, the private, tech, and humanitarian sectors. You 
 					continue to work on the project and think about where you want to take it next--and we do our 
 					best to support that vision.</p>
