--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav navbar-right"> 
+		    <ul class="nav navbar-nav navbar-right">
 			    <li><a class="active class1" href="/about">About</a></li>
                 <li><a href="/program">How it Works</a></li>
                 <li><a href="/FAQ">FAQ</a></li>
@@ -57,136 +57,61 @@
                         </div>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" height="200px" width="200px">
-                                <h3>Haifa Dia Al-Attia</h3>
-                                <p>CEO, <a class="class2" href="http://www.qrf.org/qrf_managers">Queen Rania Foundation for Education and Development (QRF)</a> </p>
-                            </div>
-                        </div>
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" height="200px" width="200px">
-                                <h3>Jackie Strecker</h3>
-                                <p>Learn Lab Manager, <a class="class2" href="http://www.unhcr.org/innovation/">UNHCR Innovation</a> </p>
-                            </div>
-                        </div>
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" height="200px" width="200px">
-                                <h3>Habib Haddad</h3>
-                                <p>Executive Director, <a class="class2" href="http://www.e14fund.com/">E14 Fund</a> </p>
-                            </div>
-                        </div>	
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" height="200px" width="200px">
-                                <h3>Lina Sergie Attar</h3>
-                                <p>CEO, <a class="class2" href="https://www.karamfoundation.org/team/">Karam Foundation</a> </p>
-                            </div>
-                        </div>	
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">
-                                <h3>Barbara Moser-Mercer</h3>
-                                <p>Director, <a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">InZone</a> </p>
-                            </div>
-                        </div>	
-			<!--Extra spaces for future adviors and to make it so Barbara is aligned on the left and not awkwardly on the right-->
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
-                                <h3></h3>
-                                <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
-                            </div>
-                        </div>	
-			<!--Extra spaces for future adviors and to make it so Barbara is aligned on the left and not awkwardly on the right-->
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
-                                <h3></h3>
-                                <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
-                            </div>
-                        </div>
-			<!--Extra spaces for future adviors and to make it so Barbara is aligned on the left and not awkwardly on the right-->
-			<div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                            <!--<img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">-->
-                                <h3></h3>
-                                <p><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/"></a> </p>
-                            </div>
-                        </div>																		    
-                    </div>
-                </div>
-            </section>
-   <section id="MediaLabTeam">
-            <div class="container">
-                <div class="row" style="padding-top: 10%">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Meet the Media Lab Team</h2>
-                        <hr class="primary">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-				<div class="col-lg-3 col-md-6 text-center">
-                        <div class="service-box">
-                            <img src="/BW/BWFysal.jpg/" alt="Fysal" height="200px" width="200px">
-                            <h3>Fysal A Alkhayyal</h3>
-                            <p>Bio</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="service-box">
-                        <img src="/BW/BWGenevieve.jpg" alt="Genevieve" height="200px" width="200px">
-                            <h3>Genevieve Barrons</h3>
-                            <p>Bio</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="service-box">
-                            <img src="/BW/BWPhilipp.jpg" alt="Philipp" height="200px" width="200px">
-                            <h3>J. Philipp Schmidt</h3>
-                            <p>Bio</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="service-box">
-                            <img src="/BW/BWLyndie.jpg" alt="Lyndie" height="200px" width="200px">
-                            <h3>Lyndie Mitchell</h3>
-                            <p>Bio</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-							    	<!--
-							       <section id="Mentors">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12 text-center">
-                                <h2 class="section-heading">Mentors</h2>
-                                <hr class="primary">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-6 text-center">
-                                <div class="service-box">
-                                <img src="/Mentor/" alt="Mentor1">
-        
-                                    <h3>Mentor #1</h3>
-                                    <p>Bio</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section> 
-								 -->
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" style="width:100%">
+      <div class="container">
+        <h2>Haifa Dia Al-Attia</h2>
+        <p class="title">CEO, Queen Rania Foundation for Education and Development</p>
+        <p><button class="button"><a class="class2" href="http://www.qrf.org/qrf_managers">Learn More</a></button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" style="width:100%">
+      <div class="container">
+        <h2>Jackie Strecker</h2>
+        <p class="title">Learn Lab Manager, UNHCR</p>
+        <p><button class="button"><a class="class2" href="http://www.unhcr.org/innovation/">Learn More</a></button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" style="width:100%">
+      <div class="container">
+        <h2>Habib Haddad</h2>
+        <p class="title">Executive Director, E14 Fund</p>
+        <p><button class="button"><a class="class2" href="http://www.e14fund.com/">Learn More</a></button></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" style="width:100%">
+      <div class="container">
+        <h2>Lina Sergie Attar</h2>
+        <p class="title">CEO,  Karam Foundation</p>
+        <p><button class="button"><a class="class2" href="https://www.karamfoundation.org/team/">Learn More</a></button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" style="width:100%">
+      <div class="container">
+        <h2>Barbara Moser-Mercer</h2>
+        <p class="title">Director,  InZone</p>
+        <p><button class="button"><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">Learn More</a></button></p>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 <header style="background-color: #B6B6B4; min-height: 60%">
                 	<div class="header-content">
                             <div class="header-content-inner">
@@ -200,6 +125,6 @@
                             </div>
                 	</div>
                 	</header>
-		
+
 </body>
 								 </html>
