--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" style="width:100%">
+      <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" height="200px" width="200px">
       <div class="container">
         <h2>Haifa Dia Al-Attia</h2>
         <p class="title">CEO, Queen Rania Foundation for Education and Development</p>
@@ -70,7 +70,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" style="width:100%">
+      <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" height="200px" width="200px">
       <div class="container">
         <h2>Jackie Strecker</h2>
         <p class="title">Learn Lab Manager, UNHCR</p>
@@ -80,7 +80,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" style="width:100%">
+      <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" height="200px" width="200px">
       <div class="container">
         <h2>Habib Haddad</h2>
         <p class="title">Executive Director, E14 Fund</p>
@@ -88,9 +88,11 @@
       </div>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="column">
     <div class="card">
-      <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" style="width:100%">
+      <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" height="200px" width="200px">
       <div class="container">
         <h2>Lina Sergie Attar</h2>
         <p class="title">CEO,  Karam Foundation</p>
@@ -100,7 +102,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" style="width:100%">
+      <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" height="200px" width="200px">
       <div class="container">
         <h2>Barbara Moser-Mercer</h2>
         <p class="title">Director,  InZone</p>
