--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
       <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" style="width: 100%">
       <div class="container">
         <h2>Haifa Dia Al-Attia</h2>
-        <p class="title">CEO, Queen Rania Foundation for Education and Development</p>
+        <p class="title" style="height: 60px">CEO, Queen Rania Foundation for Education and Development</p>
         <p><button class="button"><a class="class2" href="http://www.qrf.org/qrf_managers">Learn More</a></button></p>
       </div>
     </div>
@@ -73,7 +73,7 @@
       <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" style="width: 100%">
       <div class="container">
         <h2>Jackie Strecker</h2>
-        <p class="title">Learn Lab Manager, UNHCR</p>
+        <p class="title" style="height: 60px">Learn Lab Manager, UNHCR</p>
         <p><button class="button"><a class="class2" href="http://www.unhcr.org/innovation/">Learn More</a></button></p>
 											   <p></p>
       </div>
@@ -84,7 +84,7 @@
       <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" style="width: 100%">
       <div class="container">
         <h2>Habib Haddad</h2>
-        <p class="title">Executive Director, E14 Fund</p>
+        <p class="title" style="height: 60px">Executive Director, E14 Fund</p>
         <p><button class="button"><a class="class2" href="http://www.e14fund.com/">Learn More</a></button></p>
 										  <p></p>
       </div>
@@ -97,7 +97,7 @@
       <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" style="width: 100%">
       <div class="container">
         <h2>Lina Sergie Attar</h2>
-        <p class="title">CEO,  Karam Foundation</p>
+        <p class="title" style="height: 60px">CEO,  Karam Foundation</p>
         <p><button class="button"><a class="class2" href="https://www.karamfoundation.org/team/">Learn More</a></button></p>
       </div>
     </div>
@@ -107,7 +107,7 @@
       <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" style="width: 100%">
       <div class="container">
         <h2>Barbara Moser-Mercer</h2>
-        <p class="title">Director,  InZone</p>
+        <p class="title" style="height: 60px">Director,  InZone</p>
         <p><button class="button"><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">Learn More</a></button></p>
       </div>
     </div>
