--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" style="width: 360px height=:360px">
+      <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" style="width: 100% height=:360px">
       <div class="container">
         <h2>Haifa Dia Al-Attia</h2>
         <p class="title" style="height: 60px">CEO, Queen Rania Foundation for Education and Development</p>
@@ -70,7 +70,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" style="width: 360px height=:360px">
+      <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" style="width: 100% height=:360px">
       <div class="container">
         <h2>Jackie Strecker</h2>
         <p class="title" style="height: 60px">Learn Lab Manager, UNHCR</p>
@@ -80,7 +80,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" style="width: 360px height=:360px">
+      <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" style="width: 100% height=:360px">
       <div class="container">
         <h2>Habib Haddad</h2>
         <p class="title" style="height: 60px">Executive Director, E14 Fund</p>
@@ -92,7 +92,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" style="width: 360px height=:360px">
+      <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" style="width: 100% height=:360px">
       <div class="container">
         <h2>Lina Sergie Attar</h2>
         <p class="title" style="height: 60px">CEO,  Karam Foundation</p>
@@ -102,7 +102,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" style="width: 360px height=:360px">
+      <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" style="width: 100% height=:360px">
       <div class="container">
         <h2>Barbara Moser-Mercer</h2>
         <p class="title" style="height: 60px">Director,  InZone</p>
