--- a/about/index.html
+++ b/about/index.html
@@ -63,8 +63,7 @@
       <img src="/BW/BWBarbara_Moser-Mercer.jpg" alt="Barbara Moser-Mercer" width="100%" height="360px">
       <div class="container">
         <h2>Barbara Moser-Mercer</h2>
-        <p class="title" style="height: 60px">Director,  InZone</p>
-        <p><button class="button"><a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">Learn More</a></button></p>
+        <p class="title" style="height: 60px">Director,  InZone<a class="class2" href="http://www.unige.ch/inzone/who-we-are/international-advisory-board/barbara-moser-mercer/">Learn More</a><</p>
       </div>
     </div>
   </div>
@@ -73,8 +72,7 @@
       <img src="/BW/BWHabib_Haddad.png" alt="Habib Hadad" width="100%" height="360px">
       <div class="container">
         <h2>Habib Haddad</h2>
-        <p class="title" style="height: 60px">Executive Director, E14 Fund</p>
-        <p><button class="button"><a class="class2" href="http://www.e14fund.com/">Learn More</a></button></p>
+        <p class="title" style="height: 60px">Executive Director, E14 Fund<a class="class2" href="http://www.e14fund.com/">Learn More</a></p>
       </div>
     </div>
   </div>
@@ -83,8 +81,7 @@
       <img src="/BWHaifa_Al-Attia.jpg" alt="Haifa Dia Al-Attia" width="100%" height="360px">
       <div class="container">
         <h2>Haifa Dia Al-Attia</h2>
-        <p class="title" style="height: 60px">CEO, Queen Rania Foundation for Education and Development</p>
-        <p><button class="button"><a class="class2" href="http://www.qrf.org/qrf_managers">Learn More</a></button></p>
+        <p class="title" style="height: 60px">CEO, Queen Rania Foundation for Education and Development<a class="class2" href="http://www.qrf.org/qrf_managers">Learn More</a></p>
       </div>
     </div>
   </div>											  
@@ -93,8 +90,7 @@
       <img src="/BW/BWJackie_Strecker.jpg" alt="Jackie Strecker" width="100%" height="360px">
       <div class="container">
         <h2>Jackie Strecker</h2>
-        <p class="title" style="height: 60px">Learn Lab Manager, UNHCR</p>
-        <p><button class="button"><a class="class2" href="http://www.unhcr.org/innovation/">Learn More</a></button></p>
+        <p class="title" style="height: 60px">Learn Lab Manager, UNHCR<a class="class2" href="http://www.unhcr.org/innovation/">Learn More</a></p>
       </div>
     </div>
   </div>
@@ -103,8 +99,7 @@
       <img src="/BW/BWLina_Sergie_Attar.jpg" alt="Lina Sergie Attar" width="100%" height="360px">
       <div class="container">
         <h2>Lina Sergie Attar</h2>
-        <p class="title" style="height: 60px">CEO,  Karam Foundation</p>
-        <p><button class="button"><a class="class2" href="https://www.karamfoundation.org/team/">Learn More</a></button></p>
+        <p class="title" style="height: 60px">CEO,  Karam Foundation<a class="class2" href="https://www.karamfoundation.org/team/">Learn More</a></p>
       </div>
     </div>
   </div>												
